import React from 'react';
import { shallow } from 'enzyme';
import { ExpensesSummary } from '../../components/ExpensesSummary';

test('should correctly render ExpensesSummary component with 1 expense', () => {
    const wrapper = shallow(<ExpensesSummary expenseCount={1} expensesTotal={245} />);
    expect(wrapper).toMatchSnapshot();
});

test('should correctly render ExpensesSummary component with multiple expense', () => {
    const wrapper = shallow(<ExpensesSummary expenseCount={23} expensesTotal={24554768534246575} />);
    expect(wrapper).toMatchSnapshot();
});